<resources>
    <string name="app_name">Fake GPS</string>
    <string name="app_desc">Change Map Location</string>
    <string name="ok">OK</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="header_name">Fake GPS</string>
    <string name="header_desc">Change and Fake My GPS</string>
    <string name="url_home">https://github.com/bigsinger/fakegps</string>
    <string name="checkingupgrade">Checking Upgrade, Wait a moment...</string>
    <string name="checkingupgradefailed">Checking Upgrade Failed. Please try again later</string>
    <string name="versionislatest">The version is latest!</string>


    <string name="menu_check">Check Upgrade</string>
    <string name="menu_home">Home</string>
    <string name="menu_recommend">Recommend</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_help">Help</string>
    <string name="menu_other">Other</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>

    <string name="title_select_theme">Select Theme</string>

    <string name="xpose_actived">This module is activated!</string>
    <string name="xpose_not_actived">This module not activated!</string>
    <string name="xpose_please_active">Please active this module refer to the help!</string>

    <string name="tip_already_saved">already saved!</string>
    <string name="settings">Settings</string>
    <string name="map_setting">map setting</string>
    <string name="language_setting">language setting</string>
    <string name="language_list_title">Select a language</string>
    <string name="lang_auto">Auto</string>
    <string name="lang_en">English</string>
    <string name="lang_ch">Chinese</string>
    <string name="lang_setting_is_applyed">Language modification has been applied to restart App and take effect</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This apk requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.</string>
    <string name="permission_required_toast">Location permission is required for this apk.</string>

    <!--设置界面地图设置相关-->
    <string name="map_list_title">Select a map provider</string>
    <string name="baidu_map">Baidu Map</string>
    <string name="google_map">Google Map</string>


    <string name="version_check_failure">Version check faild! Please check network connection.</string>
    <string name="version_not_new">No new update is available</string>
</resources>
