<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">
    <PreferenceCategory android:title="@string/map_setting">
        <ListPreference
            android:dialogTitle="@string/map_list_title"
            android:entries="@array/setting_mpas"
            android:entryValues="@array/setting_mpas"
            android:key="setting_map_list"
            android:defaultValue="@string/baidu_map"
            android:title="@string/map_list_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/language_setting">
        <ListPreference
            android:dialogTitle="@string/language_list_title"
            android:entries="@array/setting_lang"
            android:entryValues="@array/setting_lang"
            android:key="setting_lang_list"
            android:defaultValue="@string/lang_auto"
            android:title="@string/language_list_title"/>
    </PreferenceCategory>
</PreferenceScreen>
